Se agregó un botón con la funcionalidad de volver al inicio y reiniciar en caso de que la busqueda falle o no se encuentre un personaje con ese nombre

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="input-group mb-3">
             <input type="text" id="search" class="form-control" placeholder="Busca en el universo...">
             <button id="search-btn" class="btn btn-primary">Buscar</button>
+            <button id="reset-btn" class="btn btn-secondary ms-2">Reiniciar</button>
         </div>
         <div id="characters-container" class="row"></div>
     </div>
